Student Extension Form (#132)
* Add initial extension form screen

* Add comments

* Original date calculations

* Add min/max to form

* Add other form and form toggle

* Add submit button toggle

* add all requests screen

* hide admin navbar stuff from normal users

* Implement late pass submission flow

* Fix date parsing

* slightly safer professor check

* Finish extension form and fix dates

* absolutely cook up some forms and dates 🔥

* Add calculated date component

* Move text for consistency

* Fix selected visibility

* Reset form state across
